<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/tittle_select_training"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_gravity="center_horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/buttonDropset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:background="@drawable/btn_background"
                android:padding="16dp"
                android:text="@string/btn_title_dropset"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonPosNeg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:background="@drawable/btn_background"
                android:padding="16dp"
                android:text="@string/btn_title_pos_neg"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonNegative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:background="@drawable/btn_background"
                android:padding="16dp"
                android:text="@string/btn_title_nega"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />
        </TableRow>
    </TableLayout>


</RelativeLayout>
