<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/textViewDialogLoadedWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bac_title_selec_excer"
        android:padding="12dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/title_loaded_weight"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/grey_white"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/seekBarDialogLoadedWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDialogLoadedWeight"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:max="719" />


    <TextView
        android:id="@+id/textViewDialogMinWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekBarDialogLoadedWeight"
        android:layout_below="@id/seekBarDialogLoadedWeight"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="12dp"
        android:text="@string/min_loaded_weight"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textViewDialogMaxWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/seekBarDialogLoadedWeight"
        android:layout_below="@id/seekBarDialogLoadedWeight"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="12dp"
        android:text="@string/max_loaded_weight"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:ignore="RtlHardcoded" />


</RelativeLayout>