<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:weightSum="2"
    tools:context="amigos.com.conexionarduino.DropsetActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bac_title_selec_excer"
            android:padding="12dp"
            android:text="@string/title_select_excersise"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white_grey"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textViewLoadedWeight"
            android:layout_below="@id/textView"
            android:layout_marginBottom="8dp"
            android:choiceMode="singleChoice" />


        <TextView
            android:id="@+id/textViewLoadedWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/bac_title_selec_excer"
            android:padding="12dp"
            android:text="@string/title_loaded_weight"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white_grey"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBarLoadedWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewLoadedWeight"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:max="719" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_loaded_weight"
            android:layout_marginTop="8dp"
            android:layout_alignLeft="@+id/seekBarLoadedWeight"
            android:layout_marginLeft="8dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@id/seekBarLoadedWeight"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_loaded_weight"
            android:layout_marginTop="8dp"
            android:layout_alignRight="@+id/seekBarLoadedWeight"
            android:layout_marginRight="8dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@id/seekBarLoadedWeight"
            tools:ignore="RtlHardcoded" />


        <Button
            android:id="@+id/buttonStartEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/btn_background"
            android:padding="20dp"
            android:text="@string/btn_title_start"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <!--<RelativeLayout-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_weight="2"-->
    <!--android:paddingLeft="12dp"-->
    <!--android:paddingRight="12dp">-->


    <!--</RelativeLayout>-->
</LinearLayout>